fix(CSS): Images overflowing

--- a/public/css/irn.css
+++ b/public/css/irn.css
@@ -38,6 +38,11 @@ body {
   word-break: break-word;       /* older navigators */
 }
 
+img {
+  /* Don't overflow */
+  max-width: 100%;
+}
+
 /* different font for headings which i think is considered good design? */
 h1, h2, h3, h4, h5, h6 {
   font-family: sans-serif, serif;
